--- a/app/views/layouts/national.html.erb
+++ b/app/views/layouts/national.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--[if (lt IE 9) & (!IEMobile)]> <html class="no-js old-ie ie national" lang="en">  <![endif]-->
-<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie national" lang="en">    <![endif]-->
-<!--[if gt IE 8]><!-->            <html class="no-js national" lang="en">            <!--<![endif]-->
+<!--[if (lt IE 9) & (!IEMobile)]> <html class="no-js old-ie ie" lang="en">  <![endif]-->
+<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en">    <![endif]-->
+<!--[if gt IE 8]><!-->            <html class="no-js" lang="en">            <!--<![endif]-->
 <head>
   <base href="<%= request.path %>">
   <meta name="fragment" content="!">
