* Added suggestionsVisible, rather than emptying the suggestions list * Added a delay to closing the suggestions list so that the links can receive the click event * Cycle through the list in both directions

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -21,7 +21,7 @@
     <%# //Close search %>
 
     <%# Search results %>
-    <div class="search-results" ng-show="suggestions.length > 0">
+    <div class="search-results" ng-show="suggestionsVisible">
       <div class="search-results__inner island island--flush-btm">
         <h2 class="search-results__hdr">Search results</h2>
         <ul class="search-results__list" tabindex="0">
