--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -302,7 +302,7 @@
       <%# Facebook %>
       <% if @centre.facebook.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--facebook icon--base-color" aria-hidden="true"></span>
@@ -319,7 +319,7 @@
       <%# Twitter %>
       <% if @centre.twitter.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--twitter icon--base-color" aria-hidden="true"></span>
@@ -336,7 +336,7 @@
       <%# Instagram %>
       <% if @centre.instagram.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--instagram icon--base-color" aria-hidden="true"></span>
@@ -353,7 +353,7 @@
       <%# Pinterest %>
       <% if @centre.pinterest.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--pinterest icon--base-color" aria-hidden="true"></span>
@@ -370,7 +370,7 @@
       <%# YouTube %>
       <% if @centre.youtube.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--youtube icon--base-color" aria-hidden="true"></span>
@@ -387,7 +387,7 @@
       <%# Google+ %>
       <% if @centre.google_plus.present? %>
         <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
+          <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external" target="_blank">
             <div class="flag__image">
               <div class="box islet">
                 <span class="icon icon--google-plus icon--base-color" aria-hidden="true"></span>
