UPdate google plus to google+

--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -394,7 +394,7 @@
               </div>
             </div>
             <div class="flag__body">
-              Google Plus
+              Google+
             </div>
           </a>
         </li>
