Some updates to gallery and added centre tile

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -157,7 +157,7 @@
 .icon-pdf:before {content: "\e033";}
 
 /* Gift card */
-.icon-gift-card:before {
+.icon--gift-card:before {
   content: "\e034";
   color: $color-brand;
 }
