--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -73,7 +73,7 @@
               <dd class="txt-truncate"><a href="mailto:">westfield@areallymassivelongemailaddress.com.au</a><span class="icon icon--email icon--xlrg" aria-hidden="true"></span></dd>
               <dt class="hide-visually">Westfield gift card</dt>
               <%# FIXME: [BACKEND] if store doesn't except gift cards then say "Not accepted" %>
-              <dd>Gift card accepted<span class="icon icon-gift-card icon--xlrg" aria-hidden="true"></span></dd>
+              <dd>Gift card accepted<span class="icon icon--gift-card icon--xlrg" aria-hidden="true"></span></dd>
             </dl>
             <%# //Store meta %>
 
