--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -1,21 +1,35 @@
 /* ======================================================================================
    @LAYOUT -> NATIONAL HOMEPAGE
    ====================================================================================== */
+.national {
 
-@include respond-min($non-palm) {
-  /* Class on `html` */
-  .national {
+  /* --Shared rules-- */
+
+  /* Set common colours */
+  &,
+  a,
+  .icon:before {color: #fff;}
+
+  @include respond-min($non-palm) {
+    /* Wrapper around the whole page. Need this for the (almost) full viewport background image */
     position: absolute;
     width: 100%;
     height: 100%;
   }
 }
-
-  /* Header */
-  .national-header {
+  
+  /* -- Shared styles -- */
+  .national__header,
+  .national__tabs .tab__content {
     /* Setting a dark background colour so you can still see the white text even in case the images in the gallery don't get loaded/take a long time to load */
     background-color: $color-base-txt;
+  }
+
+  /* -- Header -- */
+
+  .national__header {
     @include to-rem(height, 259);
+    box-shadow: 0 0 8px 10px rgba(0,0,0,.5);
 
     @include respond-min($non-palm) {
       /* By making it shorter than 100%, we will have room to show the centres tiles in the viewport */
@@ -26,13 +40,6 @@
       /* Show more of the image at this breakpoint */
       height: 80%;
     }
-
-    /* --Shared rules-- */
-
-    /* Set common colours */
-    &,
-    a,
-    .icon:before {color: #fff;}
 
     /* `.container` wraps around the logo, nav and tagline. This sets its height to be the full height `.national-header` */
     .container {height: 100%;}
@@ -47,10 +54,13 @@
         z-index: 2;
       }
 
-      .logo img {
-        @include to-rem(top, 35);
+      /* Positioning the logo and nav to be at the same level for palm only */
+      .logo img,
+      nav {@include to-rem(top, 13);}
 
+      .logo img {
         @include respond-min($non-palm) {
+          @include to-rem(top, 35);
           /* Increase logo size at this breakpoint, same as dimension in `.is-header-hero .logo` */
           width: 126px;
           height: 41px;
@@ -60,33 +70,57 @@
       h1 {
         /* Aligns text centre vertically */
         top: 50%;
-        left: 50%;
-        @include translate(-50%, -50%);
+        @include translate(0, -50%);
+        /* Need the `width` so the text can align centre to the viewport */
+        width: 100%;
+        text-align: center;
+        /* Need a tigher `line-height` so the `span` will sit closer to the text under it */
+        line-height: 1;
 
         @include respond-min($non-palm) {
-          /* Aligns text centre horizontally as well at this breakpoint */
           left: 0;
-          @include translate(0, -50%);
+          text-align: left;
           @include font-size(48);
+        }
+
+        span {
+          display: block;
+          @include font-size($font-size-sml);
+
+          @include respond-min($non-palm) {
+            @include font-size(18);
+          }
         }
       }
 
       nav {
-        @include to-rem(top, 40);
         right: 0;
-        @include font-size(12);
+        @include font-size($font-size-milli);
 
-        a {
-          text-align: center;
+        @include respond-min($non-palm) {
+          @include to-rem(top, 47);
+          @include font-size($font-size-sml);
         }
 
-          .icon:before {
+        a {
+          display: block;
+          text-align: center;
+          opacity: .5;
+
+          @include respond-min($non-palm) {
+            opacity: 1;
+          }
+        }
+
+          .icon {
+            /* Can't do it on `.icon:before` because mobile Safari doesn't like it for some reasons */
             display: block;
+            line-height: 1;
           }
       }
   }
 
-      /*-- Hero image paths --*/ 
+      /*-- Hero image paths. --*/ 
 
       .national__hero__1 {
         background-image: image-url("national/national-hero-01-sml.jpg");
@@ -96,4 +130,101 @@
         }
       }
 
-      .national__hero__2 {background-image: image-url("national/national-hero-02.jpg");}
+      .national__hero__2 {
+        background-image: image-url("national/national-hero-02-sml.jpg");
+
+        @include respond-min($non-palm) {
+          background-image: image-url("national/national-hero-02.jpg");
+        }
+      }
+
+  /* -- Main -- */
+
+  /* -- Tabs -- */
+  .national__tabs {
+    position: relative;
+    @include to-rem(margin-top, -70);
+
+    /* -- Shared styles -- */
+
+    /* Set common colour */
+    &,
+    a {
+      color: #fff;
+    }
+
+    /* Set common font-size and display property */
+    h2,
+    .tab__nav {
+      display: inline-block;
+      @include font-size(18);
+    }
+
+    /* Heading next to`tab__nav` */
+    h2 {
+      @include to-rem(margin-right, 40);
+      display: none;
+    }
+
+    /* Tab nav */
+    .tab__nav {
+      li:first-child a {padding-left: 0;}
+
+      a {
+        opacity: .6;
+        @include to-rem(padding, 25 12);
+
+        &:hover,
+        &:focus,
+        &.is-active {opacity: 1;}
+      }
+    }
+  }
+
+    /* Set on `a`. Tile that links to the relevant centre homepage */
+    .national__centre-tile {
+      display: block;
+      position: relative;
+      background-size: cover;
+      background-position: 0 0;
+
+      &:before {
+        /* Setting `z-index` so it will sit under `national__centre-tile__content` */
+        z-index: 1;
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        /* Gradient over the background image */
+        @include linear-gradient($from: rgba(#000, 0) 0%, $to: rgba(#000, .8) 100%, $dir: left, $dir-webkit: right);
+      }
+    }
+
+      /* Wrapper around */
+      .national__centre-tile__content {
+        position: relative;
+        z-index: 2;
+        @include to-rem(min-height, 150);
+
+        h3 {
+          /* Aligns text centre vertically */
+          position: absolute;
+          top: 50%;
+          @include translate(0, -50%);
+          @include font-size(50);
+          /* Set it to use the same `font-family` and `font-weight` as `h1` */
+          @extend .h1;
+          text-transform: uppercase;
+        }
+      }
+
+    .national__centre-tile--nsw {
+      background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_750,h_200,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
+
+      @include respond-min($non-palm) {
+        background-image: url('http://res.cloudinary.com/wlabs/image/fetch/w_1600,h_300,c_fill,e_blur:300/http://beta.westfield.com.au/assets/heroes/bondijunction-lrg-4ec924a641f26e4ae8822ec42d6bb7a3.jpg');
+      }
+    }
